--- a/PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.API/PrivateHospitals.API.csproj
+++ b/PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.API/PrivateHospitals.API.csproj
@@ -10,6 +10,10 @@
         <PackageReference Include="FluentAssertions" Version="6.12.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
