--- a/PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.API/appsettings.json
+++ b/PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=HospitalLocal;Username=test;Password=test"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=HospitalDb;Username=test;Password=test"
   },
   "Logging": {
     "LogLevel": {
