Scripts + doctor info

--- a/PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.Infrastructure/PrivateHospitals.Infrastructure.csproj
+++ b/PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.Infrastructure/PrivateHospitals.Infrastructure.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
@@ -34,6 +36,21 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Resources\SqlQueries.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>SqlQueries.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\SqlQueries.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>SqlQueries.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
