--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with: 
           dotnet-version: '8.0'
+      
+      - name: Restore dependencies
+        run: dotnet restore PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.sln
 
       - name: Build project
         run: dotnet build PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.sln --no-restore
