--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,7 +40,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t vadim112281/private-hospitals:latest .
+        run: docker build -t vadim112281/private-hospitals:latest -f PrivateHospitals/backend/PrivateHospitals/Dockerfile .
       
       - name: Push Docker image
         run: docker push vadim112281/private-hospitals:latest
