--- a/PrivateHospitals/backend/PrivateHospitals/Dockerfile
+++ b/PrivateHospitals/backend/PrivateHospitals/Dockerfile
@@ -1,9 +1,15 @@
-# Використовуємо .NET SDK для збірки
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Копіюємо всі файли для збірки
-COPY . .
+# Копіюємо рішення
+COPY PrivateHospitals.sln . 
+
+# Копіюємо всі необхідні проєктні файли
+COPY PrivateHospitals.API/ ./PrivateHospitals.API/
+COPY PrivateHospitals.Application/ ./PrivateHospitals.Application/
+COPY PrivateHospitals.Core/ ./PrivateHospitals.Core/
+COPY PrivateHospitals.Infrastructure/ ./PrivateHospitals.Infrastructure/
+COPY PrivateHospitals.Migration/ ./PrivateHospitals.Migration/
 
 # Відновлюємо залежності
 RUN dotnet restore PrivateHospitals.sln
@@ -11,15 +17,11 @@ RUN dotnet restore PrivateHospitals.sln
 # Збираємо рішення
 RUN dotnet build PrivateHospitals.sln --configuration Release --no-restore
 
-# Публікуємо тільки API проект
-RUN dotnet publish PrivateHospitals.API/PrivateHospitals.API.csproj --configuration Release --no-build -o /app/publish
+# Публікуємо рішення
+RUN dotnet publish PrivateHospitals.sln --configuration Release --no-build -o /app/publish
 
-# Використовуємо ASP.NET Runtime для запуску
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-
-# Копіюємо результати публікації
 COPY --from=build /app/publish .
 
-# Вказуємо вхідну точку на API проект
-ENTRYPOINT ["dotnet", "PrivateHospitals.API.dll"]
+ENTRYPOINT ["dotnet", "PrivateHospitals.dll"]
