--- a/PrivateHospitals/backend/PrivateHospitals/Dockerfile
+++ b/PrivateHospitals/backend/PrivateHospitals/Dockerfile
@@ -1,21 +1,22 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Копіюємо рішення
-COPY PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.sln . 
+# Копіюємо всю папку backend/PrivateHospitals
+COPY bPrivateHospitals/backend/PrivateHospitals .
 
 # Відновлюємо залежності
-RUN dotnet restore PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.sln 
+RUN dotnet restore PrivateHospitals.sln
 
 # Збираємо рішення
-RUN dotnet build PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.sln  --configuration Release --no-restore
+RUN dotnet build PrivateHospitals.sln --configuration Release --no-restore
 
-# Публікуємо рішення
-RUN dotnet publish PrivateHospitals/backend/PrivateHospitals/PrivateHospitals.sln  --configuration Release --no-build -o /app/publish
+# Публікуємо проєкт
+RUN dotnet publish PrivateHospitals.sln --configuration Release --no-build -o /app/publish
 
+# Запускаємо на базовому образі ASP.NET
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
 
-
-ENTRYPOINT ["dotnet", "PrivateHospitals.dll"]
+# Вказуємо точку входу
+ENTRYPOINT ["dotnet", "PrivateHospitals.API.dll"]
